--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-helmet": "^6.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-sticky-box": "^2.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
