--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-draggable": "^4.4.5",
     "react-helmet": "^6.1.0",
     "react-quill": "^2.0.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-sticky-box": "^2.0.4",
