--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.19.1",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-helmet": "^6.1.0",
